add_subdirectory(activitybar)
add_subdirectory(icon)

plasma_install_package(analog-clock org.kde.plasma.analogclock)
plasma_install_package(manage-inputmethod org.kde.plasma.manage-inputmethod)

add_subdirectory(appmenu)
if (KSysGuard_FOUND)
    add_subdirectory(systemmonitor)
    add_subdirectory(devicenotifier)
endif()
add_subdirectory(calendar)
add_subdirectory(digital-clock)
add_subdirectory(keyboardindicator)
add_subdirectory(kicker)
add_subdirectory(lock_logout)
add_subdirectory(mediacontroller)
add_subdirectory(panelspacer)
if(BUILD_CAMERAINDICATOR)
    add_subdirectory(cameraindicator)
endif()
add_subdirectory(clipboard)

add_subdirectory(notifications)
add_subdirectory(systemtray)
