add_definitions(-DTRANSLATION_DOMAIN=\"plasmashellprivateplugin\")

install(DIRECTORY dialogs/ DESTINATION ${KDE_INSTALL_QMLDIR}/org/kde/plasma/workspace/dialogs)
add_subdirectory(containmentlayoutmanager)
add_subdirectory(dbus)
add_subdirectory(shellprivate)
if (KWinDBusInterface_FOUND)
    add_subdirectory(keyboardlayout)
endif()
add_subdirectory(sessionsprivate)
add_subdirectory(lookandfeelqml)
add_subdirectory(calendar)
add_subdirectory(trianglemousefilter)
add_subdirectory(batterycontrol)
add_subdirectory(workspace)
add_subdirectory(timezoneselector)
