add_definitions(-DTRANSLATION_DOMAIN=\"plasmashellprivateplugin\")

add_subdirectory(containmentlayoutmanager)
add_subdirectory(dbus)
add_subdirectory(shellprivate)
add_subdirectory(keyboardlayout)
add_subdirectory(sessionsprivate)
add_subdirectory(lookandfeelqml)
add_subdirectory(calendar)
add_subdirectory(trianglemousefilter)
add_subdirectory(batterycontrol)
add_subdirectory(workspace)
add_subdirectory(timezoneselector)
