
add_subdirectory(applicationjobs)
if (KF5Activities_FOUND)
    add_subdirectory(activities)
endif ()
add_subdirectory(apps)
add_subdirectory(devicenotifications)
add_subdirectory(dict)
add_subdirectory(executable)
add_subdirectory(favicons)
add_subdirectory(filebrowser)
if (KF5NetworkManagerQt_FOUND)
  add_subdirectory(geolocation)
endif ()
add_subdirectory(hotplug)
add_subdirectory(keystate)
add_subdirectory(mpris2)
add_subdirectory(notifications)
add_subdirectory(packagekit)
add_subdirectory(places)
add_subdirectory(powermanagement)
add_subdirectory(soliddevice)

add_subdirectory(time)
add_subdirectory(weather)
add_subdirectory(statusnotifieritem)

if(NOT WIN32)
  add_subdirectory(mouse)
  add_subdirectory(systemmonitor)
endif()
