
add_subdirectory(applicationjobs)
if (PlasmaActivities_FOUND)
    add_subdirectory(activities)
endif ()
add_subdirectory(apps)
add_subdirectory(executable)
add_subdirectory(favicons)
add_subdirectory(filebrowser)
if (KF6NetworkManagerQt_FOUND)
    add_subdirectory(geolocation)
endif ()
add_subdirectory(hotplug)
add_subdirectory(notifications)
add_subdirectory(packagekit)
add_subdirectory(places)
add_subdirectory(powermanagement)
add_subdirectory(soliddevice)

add_subdirectory(time)
add_subdirectory(weather)
add_subdirectory(statusnotifieritem)

add_subdirectory(mouse)
